--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,13 +104,78 @@ ul {
     margin-bottom: 5px;
 }
 
+.form-group textarea {
+    min-height: 120px;
+    resize: both;
+}
+
+.form-group input[type="number"] {
+    max-width: 150px;
+}
+
+
+
 .form-control {
     width: 100%;
-    padding: 10px;
+    padding: 12px 15px;
+    margin-bottom: 10px;
     border: 1px solid #ced4da;
-    border-radius: 4px;
+    border-radius: 6px;
     font-size: 1rem;
+    line-height: 1.5;
+    color: var(--dark-color);
+    background-color: #fff;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
+
+.form-control:focus {
+    border-color: var(--primary-color);
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+
+.form-group select.form-control {
+    appearance: none;
+    -webkit-appearance: none;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2C197.3L159.9%2C68.9c-2.9-2.9-7.7-2.9-10.6%2C0L5.3%2C197.3c-2.9%2C2.9-2.9%2C7.7%2C0%2C10.6l12.7%2C12.7c2.9%2C2.9%2C7.7%2C2.9%2C10.6%2C0l116.1-116.1c2.9-2.9%2C7.7-2.9%2C10.6%2C0l116.1%2C116.1c2.9%2C2.9%2C7.7%2C2.9%2C10.6%2C0l12.7-12.7C289.9%2C205%2C289.9%2C200.2%2C287%2C197.3z%22%2F%3E%3C%2Fsvg%3E');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 10px;
+    padding-right: 30px;
+}
+
+.form-group select {
+    width: 100%;
+    padding: 12px 15px;
+    margin-bottom: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 6px;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: var(--dark-color);
+    background-color: #fff;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+    transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    appearance: none;
+    -webkit-appearance: none;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2C197.3L159.9%2C68.9c-2.9-2.9-7.7-2.9-10.6%2C0L5.3%2C197.3c-2.9%2C2.9-2.9%2C7.7%2C0%2C10.6l12.7%2C12.7c2.9%2C2.9%2C7.7%2C2.9%2C10.6%2C0l116.1-116.1c2.9-2.9%2C7.7-2.9%2C10.6%2C0l116.1%2C116.1c2.9%2C2.9%2C7.7%2C2.9%2C10.6%2C0l12.7-12.7C289.9%2C205%2C289.9%2C200.2%2C287%2C197.3z%22%2F%3E%3C%2Fsvg%3E');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 10px;
+    padding-right: 30px;
+}
+
+.form-group button {
+    width: 100%;
+}
+
+
+
+
+
+
 
 .btn {
     display: inline-block;
